# pico-cpp-minimum-example

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml
src/: blink.c
